@@ -4,6 +4,7 @@ Environment:
 - updated grub to 2.12.r359.g19c698d12
 - enabled firmware autodetection on -latest and local image
   --> 12% faster bootup on both media types :)
+- added additional bash_completions
 ISO:
 - updated ISO grub config
 - limit memory to 4G in UEFI MIX MODE to avoid NX issue
